feat: swap zod for arktype

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "arktype": "^2.0.0-dev.26",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "frog": "latest",
