--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "dotenv": "^16.4.5",
     "frog": "latest",
     "hono": "^4",
-    "viem": "^2.16.5",
-    "zod": "^3.23.8"
+    "viem": "^2.16.5"
   },
   "devDependencies": {
     "tsx": "^4.7.1",
